--- a/data/values.yml
+++ b/data/values.yml
@@ -8,9 +8,9 @@
 - icon: images/values/educational-book.svg
   title: Academic Advancement
   text:
-    It’s never too early to set your child up for future success. With our
-    French offerings, well-rounded curriculum, and home-away-from-home learning
-    environment, your child will have the tools they need to thrive.
+    It's never too early to set your child up for future success. With our
+    French offerings, well-rounded curriculum, and a comfortable learning
+    environment. Your child will have the tools they need to thrive.
 
 - icon: images/values/superhero.svg
   title: Confidence & Communication
