--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   },
   "homepage": "https://github.com/eberkund/atcd-aurora#readme",
   "devDependencies": {
+    "@types/facebook-pixel": "0.0.23",
     "@types/google.maps": "^3.45.1",
-    "@types/node": "^15.12.1",
-    "@types/facebook-pixel": "0.0.23"
+    "@types/node": "^15.12.1"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.11.4",
-    "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/typography": "^0.4.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "alpinejs": "^2.8.2",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^10.4.19",
+    "flowbite": "^2.3.0",
+    "flowbite-datepicker": "^1.2.6",
+    "postcss": "^8.4.38",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.2",
-    "tailwindcss": "^2.1.4"
+    "tailwindcss": "^3.4.3"
   }
 }
