--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "alpinejs": "^2.8.2",
     "autoprefixer": "^10.4.19",
+    "color": "^4.2.3",
     "postcss": "^8.4.38",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.2",
